--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -5,7 +5,7 @@
 
 .textkai {
     font-size: 18px;
-    font-family: 'crimson', 'FZKTK', serif;
+    font-family: 'crimson', 'LXGW WenKai Screen R', serif;
 }
 
 .textkai p {
