new posts (text only)

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -30,6 +30,16 @@
     text-indent: 0;
 }
 
+.aright {
+    text-align: right !important;
+    text-indent: 0 !important;
+}
+
+.script p{
+    line-height: 1;
+    text-indent: 0;
+}
+
 .hero-image {
     max-width: 80%;
 }
