--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -40,6 +40,27 @@
     text-indent: 0;
 }
 
+.sp-qa {
+    text-indent: 0 !important;
+    font-family: 'crimson', 'LXGW WenKai Screen R', serif;
+    font-size: 15pt;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    line-height: 1;
+}
+
+.ques {
+    margin-top: 2em;
+}
+
+.answ {
+    margin-top: 0.5em;
+}
+
+.qa-q {
+    font-family: 'crimson', 'LXGW WenKai Screen R', serif;
+}
+
 .hero-image {
     max-width: 80%;
 }
