modify copyright contents

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -83,3 +83,8 @@
     align-content: center;
     justify-content: space-around;
 }
+
+.footer {
+    line-height: 1.4em;
+    font-size: 12px !important;
+}
