add textual content part1

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -88,3 +88,8 @@
     line-height: 1.4em;
     font-size: 12px !important;
 }
+
+.excerpt {
+    font-family: 'crimson', 'LXGW WenKai Screen R', serif;
+    font-size: 18px !important;
+}
