版权文件保护措施更新

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -151,8 +151,12 @@
   }  
 
 // 禁止右键元素
-.no-download {
+.no-interact {
+    user-drag: none;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
     pointer-events: none;
     user-select: none;
 }
-   
+
