--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -45,6 +45,10 @@
     text-indent: 0;
 }
 
+.fontbold {
+    font-weight: bold;
+}
+
 .sp-qa {
     text-indent: 0 !important;
     font-family: 'crimson', 'LXGW WenKai Screen R', serif;
