--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -27,7 +27,6 @@
     margin: 0.3em 0;
 }
 
-// 居中/靠左/靠右
 .centering {
     text-align: center !important;
     text-indent: 0 !important;
@@ -37,10 +36,6 @@
     text-indent: 0;
 }
 
-.aleft {
-    text-align: left !important;
-    text-indent: 0 !important;
-}
 .aright {
     text-align: right !important;
     text-indent: 0 !important;
@@ -60,7 +55,6 @@
     line-height: 1;
 }
 
-// 问答用
 .ques {
     margin-top: 2em;
 }
@@ -75,6 +69,15 @@
 
 .hero-image {
     max-width: 80%;
+}
+
+.borderless {
+
+    tr,
+    td,
+    th {
+        border: 0;
+    }
 }
 
 .flexbox {
