--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -16,11 +16,10 @@
 .textkai {
     font-size: 18px;
     font-family: 'crimson', 'LXGW WenKai Screen R', serif;
-}
-
-.textkai p {
-    line-height: 1.3;
-    margin: 0.3em 0;
+    p {
+        line-height: 1.3;
+        margin: 0.3em 0;
+    }
 }
 
 .excerpt p {
@@ -31,10 +30,9 @@
 .centering {
     text-align: center !important;
     text-indent: 0 !important;
-}
-
-.centering p {
-    text-indent: 0;
+    p {
+        text-indent: 0;
+    }
 }
 
 .aleft {
